# hyphamanager

./: .gitignore  CMakeLists.txt  README.md  hyphamanager-config.cmake
source/handlers/: CMakeLists.txt
source/handlers/blechuhr/: CMakeLists.txt  blechuhr.cpp  blechuhr.h  blechuhrwidget.cpp  blechuhrwidget.h  blechuhrwidget.ui
source/handlers/dooropener/: CMakeLists.txt  dooropener.cpp  dooropener.h  dooropenerwidget.cpp  dooropenerwidget.h  dooropenerwidget.ui
source/handlers/serverstatus/: CMakeLists.txt  serverstatus.cpp  serverstatus.h  serverstatuswidget.cpp  serverstatuswidget.h
source/handlers/videocontrol/: CMakeLists.txt  videocontrol.cpp  videocontrol.h  videocontrolwidget.cpp  videocontrolwidget.h  videocontrolwidget.ui
source/hyphamanager/: CMakeLists.txt
source/hyphamanager/include/: defines.h.in
source/hyphamanager/source/: hyphamanager.cpp
source/plugins/: CMakeLists.txt
source/plugins/email/: CMakeLists.txt  email.cpp  email.h  emailwidget.cpp  emailwidget.h
source/plugins/explorenfc/: CMakeLists.txt  explorenfc.cpp  explorenfc.h  explorenfcwidget.cpp  explorenfcwidget.h
source/plugins/fingerprintzfm/: CMakeLists.txt  fingerprintzfm.cpp  fingerprintzfm.h  fingerprintzfmwidget.cpp  fingerprintzfmwidget.h
source/plugins/lightsensor/: CMakeLists.txt  lightsensor.cpp  lightsensor.h  lightsensorwidget.cpp  lightsensorwidget.h  lightsensorwidget.ui
source/plugins/rfid/: CMakeLists.txt  rfid.cpp  rfid.h  rfidwidget.cpp  rfidwidget.h
source/plugins/rpianalogsensor/: CMakeLists.txt  rpianalogsensor.cpp  rpianalogsensor.h  rpianalogsensorwidget.cpp  rpianalogsensorwidget.h
source/plugins/rpigpio/: CMakeLists.txt  rpigpio.cpp  rpigpio.h  rpigpiowidget.cpp  rpigpiowidget.h  rpigpiowidget.ui
source/plugins/rpiled/: CMakeLists.txt  rpiled.cpp  rpiled.h  rpiledwidget.cpp  rpiledwidget.h  rpiledwidget.ui
source/plugins/rpipir/: CMakeLists.txt  rpipir.cpp  rpipir.h  rpipirwidget.cpp  rpipirwidget.h
source/plugins/video/: CMakeLists.txt  video.cpp  video.h  videowidget.cpp  videowidget.h
source/plugins/watersensor/: CMakeLists.txt  watersensor.cpp  watersensor.h  watersensorwidget.cpp  watersensorwidget.h
source/plugins/wifi/: CMakeLists.txt  wifi.cpp  wifi.h  wifiwidget.cpp  wifiwidget.h
src/: CMakeLists.txt  hyphamanager.cpp
src/blechuhr/: accountadddialog.cpp  accountadddialog.h  accountadddialog.ui  accountitem.cpp  accountitem.h  accountitem.ui  accountwidget.cpp  accountwidget.h  accountwidget.ui  blechuhrwindow.cpp  blechuhrwindow.h  blechuhrwindow.ui  deviceonlineimport.cpp  deviceonlineimport.h  deviceonlineimportdialog.cpp  deviceonlineimportdialog.h  deviceonlineimportdialog.ui  exportwidget.cpp  exportwidget.h  exportwidget.ui  rulesadddialog.cpp  rulesadddialog.h  rulesadddialog.ui  rulesitem.cpp  rulesitem.h  rulesitem.ui  ruleswidget.cpp  ruleswidget.h  ruleswidget.ui  summary.cpp  summary.h  summarymonth.cpp  summarymonth.h  summaryweek.cpp  summaryweek.h  summarywidget.cpp  summarywidget.h  summarywidget.ui  workingtimeadddialog.cpp  workingtimeadddialog.h  (+10 more)
src/blechuhr/model/: account.cpp  account.h  baseaccount.cpp  baseaccount.h  iterativeaccount.cpp  iterativeaccount.h  type.h  workingtime.cpp  workingtime.h
src/connection/: connectiondialog.cpp  connectiondialog.h  connectionitem.cpp  connectionitem.h  connectionitem.ui  connectionline.cpp  connectionline.h  connectionwindow.cpp  connectionwindow.h  handlerdialog.cpp  handlerdialog.h  handlerdialog.ui  handleritem.cpp  handleritem.h  plugindialog.cpp  plugindialog.h  pluginitem.cpp  pluginitem.h
src/database/: database.cpp  database.h  userdatabase.cpp  userdatabase.h  userdbsql.cpp  userdbsql.h
src/database/ldap/: userdbldap.cpp  userdbldap.h
src/handler/: autohandler.cpp  autohandler.h  autohandlerwidget.cpp  autohandlerwidget.h  handlerfactory.cpp  handlerfactory.h  handlerloader.cpp  handlerloader.h  hyphahandler.h  hyphahandlerconfig.h  managerhandlerloader.cpp  managerhandlerloader.h  unknownhandler.cpp  unknownhandler.h  unknownhandlerwidget.cpp  unknownhandlerwidget.h  unknownhandlerwidget.ui
src/handlers/: CMakeLists.txt
src/handlers/alarm/: CMakeLists.txt  alarm.cpp  alarm.h  alarmwidget.cpp  alarmwidget.h  alarmwidget.ui
src/handlers/blechuhr/: CMakeLists.txt  blechuhr.cpp  blechuhr.h  blechuhrwidget.cpp  blechuhrwidget.h
src/handlers/dooropener/: CMakeLists.txt  dooropener.cpp  dooropener.h  dooropenerwidget.cpp  dooropenerwidget.h
src/handlers/serverstatus/: CMakeLists.txt  serverstatus.cpp  serverstatus.h  serverstatuswidget.cpp  serverstatuswidget.h  serverstatuswidget.ui
src/handlers/videocontrol/: CMakeLists.txt  videocontrol.cpp  videocontrol.h  videocontrolwidget.cpp  videocontrolwidget.h
src/main/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  instance.cpp  instance.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  splashscreen.cpp  splashscreen.h
src/plugin/: autoplugin.cpp  autoplugin.h  autopluginwidget.cpp  autopluginwidget.h  autopluginwidget.ui  hyphabaseplugin.h  hyphaplugin.h  hyphapluginconfig.h  managerpluginloader.cpp  managerpluginloader.h  pluginfactory.cpp  pluginfactory.h  pluginloader.cpp  pluginloader.h  unknownplugin.cpp  unknownplugin.h  unknownpluginwidget.cpp  unknownpluginwidget.h  unknownpluginwidget.ui
src/plugins/: CMakeLists.txt
src/plugins/dht11/: CMakeLists.txt  dht11.cpp  dht11.h  dht11widget.cpp  dht11widget.h  dht11widget.ui
src/plugins/email/: CMakeLists.txt  email.cpp  email.h  email.json  emailwidget.cpp  (+2 more)
src/res/: blechuhr.qrc  main.qrc
src/settings/: databasesettings.cpp  databasesettings.h  handlersettings.cpp  handlersettings.h  hyphamanagersettings.cpp  hyphamanagersettings.h  pluginsettings.cpp  pluginsettings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  translation.cpp  translation.h  userdatabasesettings.cpp  userdatabasesettings.h
src/tests/: CMakeLists.txt  workingtime_test.cpp
src/user/: userwindow.cpp  userwindow.h  userwindow.ui
src/wizzards/: configgenerator.cpp  configgenerator.h  newconfigwizzard.cpp  newconfigwizzard.h  newconfigwizzard.ui
(+193 files in other folders)
