cmake_minimum_required(VERSION 3.0.0)

project(hyphamanager-plugins)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/plugins)
add_subdirectory( dht11 )
add_subdirectory( email )
add_subdirectory( espeak )
add_subdirectory( explorenfc )
add_subdirectory( fingerprintzfm )
add_subdirectory( flame )
add_subdirectory( lightsensor )
add_subdirectory( rfid )
add_subdirectory( rpianalogsensor )
add_subdirectory( rpiled )
add_subdirectory( rpigpio )
add_subdirectory( rpipir )
add_subdirectory( video )
add_subdirectory( watersensor )
add_subdirectory( wifi )
